examples/errors/Return403Example.raml
#%RAML 1.0 NamedExample
value: {
    "error": {
        "code": 403,
        "reason": "Forbidden",
        "apiName": "customer-insights-exp-api",
        "correlationId": "9b0af9d0-8c55-11ed-950e-00d76d1c7fcd",
        "dateTime": "2023-01-04T14:31:36.128-03:00",
        "message": {
            "description": "The client id validation failed."
        }
    }
}